--- a/richlinkpreview/build.gradle
+++ b/richlinkpreview/build.gradle
@@ -1,5 +1,30 @@
 apply plugin: 'com.android.library'
 
+
+ext {
+    bintrayRepo = 'RichLinkPreview'
+    bintrayName = 'RichLinkPreview'
+
+    publishedGroupId = 'io.github.ponnamkarthik'
+    libraryName = 'richlinkprevie'
+    artifact = 'richlinkprevie'
+
+    libraryDescription = 'A Rich Link Preview Library for Android'
+
+    siteUrl = 'https://github.com/PonnamKarthik/RichLink-Preview'
+    gitUrl = 'https://github.com/PonnamKarthik/RichLink-Preview.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'KarthikPonnam'
+    developerName = 'Karthik Ponnam'
+    developerEmail = 'ponnamkarthik3@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 26
 
@@ -35,3 +60,6 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
